# hw_accel_project

./: 00_map_helper.hpp  01_hopscotch_tests.cpp  01_test.cpp  2bitCMP  CMakeLists.txt  CompM  KVComp  README.md  Report  myHashTable.hpp  plot_bucket_lengths.ipynb  query_data.json  test.txt
HashMap/Hashmap_vec_dq/: HashMap.h
HashMap/hashmap/: HashMap.h
load_factor_study/: 01_load_input_dataset.cpp  02_lf_study.cpp  03_construct_probe_hash_map.cpp
python_scripts/: 01_initial_hash_table.ipynb  02_generate_datasets.ipynb  02_generate_datasets.py  03_bucket_mapping.ipynb  dictionary.txt  slurm_script.sh
